# IronCore-V2

./: .dockerignore  .env.payment.example  .env.production.example  .gitignore  API_KEYS_SETUP.md  CHANGELOG.md  Cargo.toml  Dockerfile  LICENSE  MIGRATIONS.md  MIGRATION_CLEANUP_PLAN.md  MIGRATION_FIX_COMPLETED.md  README.md  clippy.toml  config.example.toml  config.payment.example.toml  config.test.toml  deny.toml  fix_migrations.sh  fly.toml  renumber_migrations.sh  run_migrations_simple.sh  rustfmt.toml  start-backend.bat  start-backend.ps1  test_fee_request.json  📋_SCRIPTS_CLEANUP_REPORT.md
.cargo/: audit.toml
.github/: pull_request_template.md
.sqlx/: query-3bfe639d5033142bdeb1b1206ab97bf652377d741232ead65feb0b3d0e033f05.json  query-a06de87283205970b0c367ca3e3c6e066f3eedb747d5e7d05da288580fc645f5.json  query-b434d123fcaa2191f20ba04256d30c1de65cd618c92d0078ee4223725bdff2e7.json  query-deeee411c62646b40010708de30650a56a6f1a49dadad75104ab38c8b9c34e13.json  query-e162482173bd707779449f11ea09fb3ae095da600a86020beea89894c32ce3db.json
benches/: README.md  fee_service_bench.rs  performance_bench.rs  rpc_selector_bench.rs
docs/: API_ERROR_CODES_STANDARD.md  BEGINNER_FRIENDLY_COMPLETION_REPORT.md  DOCUMENTATION_UPDATE_REPORT.md  FAQ_NON_CUSTODIAL.md  FINAL_DOCUMENTATION_COMPLETION_REPORT.md  FINAL_DOCUMENTATION_REPORT.md  GAS_ESTIMATION_API_GUIDE.md  INDEX.md  NON_CUSTODIAL_DUAL_LOCK_SYSTEM.md  NON_CUSTODIAL_WALLET_CREATION_FLOW.md  PLATFORM_FEE_BENCHMARK.md  PR_NOTES_CLIPPY_FIX.md  QUICK_START_NON_CUSTODIAL.md  RELEASE_CLOSED_LOOP.md  SECURITY_BEST_PRACTICES.md
migrations/: 0002_core_tables.sql  0005_insert_platform_fee_rules.sql  0005_notify_tables.sql.skip  0006_insert_platform_fee_rules.sql  0006_mainnet_rpc_endpoints_production.sql  0007_insert_collector_addresses.sql  0007_mainnet_rpc_endpoints_production.sql  0007_tokens_tables.sql  0008_events_tables.sql  0008_insert_mainnet_rpc_endpoints_old.sql  0009_add_l2_fee_configurations.sql  0009_fiat_tables.sql  0010_constraints.sql  0010_correct_platform_fee_rates.sql.skip  0011_align_industry_standard_fiat_fees.sql.skip  0011_indexes.sql  0012_initial_data.sql  0014_asset_mapping_tables.sql  0014_wallet_balance_fields.sql  0016_limit_orders_table.sql  0017_admin_tables.sql  0020_seed_fiat_providers.sql  0020_wallet_encrypted_private_key.sql  (+21 more)
src/: app_state.rs  (+7 more)
(+339 files in other folders)
