[workspace]
members = ["."]

[package]
name = "ironcore"
version = "0.1.0"
edition = "2021"

[features]
default = []
dev-tools = []  # 开发工具功能（仅用于测试环境的钱包生成等）
# 注意：utoipa始终启用，不使用optional特性以避免条件编译复杂性

[dependencies]
# Web框架
axum = { version = "0.7", features = ["macros", "multipart"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }
hyper = "1.0"

# 异步运行时
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# 序列化
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 数据库
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono", "json", "rust_decimal"] }

# Redis（新增）
redis = { version = "0.24", features = ["tokio-comp", "connection-manager"] }

# UUID
uuid = { version = "1", features = ["v4", "serde"] }

# 密码学
argon2 = "0.5"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
hmac = "0.12"
aes-gcm = "0.10"
rand = "0.8"
zeroize = { version = "1", features = ["derive"] }
bcrypt = "0.15"
subtle = "2.5"

# BIP39/BIP32
bip39 = "2.0"
coins-bip32 = "0.8"
coins-bip39 = "0.8"

# 椭圆曲线
k256 = { version = "0.13", features = ["ecdsa", "sha256"] }
ed25519-dalek = "2.1"
secp256k1 = "0.29"

# Bitcoin
bitcoin = "0.31"

# Ethereum
sha3 = "0.10"
rlp = "0.5"
ethers = { version = "2.0", features = ["ws"] }

# Solana
bs58 = "0.5"

# Cardano
blake2 = "0.10"
bech32 = "0.11"

# Base64/Hex
base64 = "0.21"
hex = "0.4"
faster-hex = "0.9"
bincode = "1.3"

# JWT
jsonwebtoken = "9"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
log = "0.4"

# 错误处理
anyhow = "1"
thiserror = "1"

# 正则表达式（用于日志脱敏）
regex = "1"

# HTTP客户端
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }

# 时间
chrono = { version = "0.4", features = ["serde"] }

# 配置
dotenvy = "0.15"
toml = "0.8"

# API文档
utoipa = { version = "4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

# 异步trait
async-trait = "0.1"

# 全局状态
once_cell = "1.19"

# 精确数值计算
rust_decimal = "1"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3.8"
criterion = "0.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
